[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.10",
    "ninja",          # Optional but recommended for faster builds
    "scikit-build",   # Helps with CMake integration
]
build-backend = "setuptools.build_meta"

[project]
name = "robotmq"
version = "0.1.0"
authors = [{ name = "Yihuai Gao", email = "yihuai@stanford.edu" }]
description = "A light-weight and flexible Robot-centric Message Queue for Python applications"
dependencies = [
    "pybind11", # For Python bindings
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yihuai-gao/robot-message-queue"

[project.optional-dependencies]
examples = ["numpy", "psutil"]
[tool.setuptools]
packages = ["robotmq"]
package-data = { robotmq = [
    "core/*.pyi",
    "py/*.pyi",
    "core/include/*",
    "core/src/*",
] }
